syntax = "proto3";

option csharp_namespace = "GrpcService.Services";

import "google/protobuf/timestamp.proto";

package chat;

service chat {
    rpc SendMessage(stream RequestMessage) returns (stream ResponseMessage);
}

message RequestMessage {
    
}

message ResponseMessage {

}